pipeline compile fix